--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "prettier": "^3.3.3",
     "typescript": "^5.6.3",
     "vite": "^5.4.9"
   },
